log
Fri, May 16, 2025 10:22:23 PM: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:70:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0, flag = 1;
         ^
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025 10:22:38 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ac07746
Fri, May 16, 2025 11:03:35 PM: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++-------
 1 file changed, 30 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'enFila':
sudoku.c:57:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if (sudo[n][y] == cand && n != posx);
         ^~
sudoku.c:58:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
             return 0;
             ^~~~~~
cc1.exe: all warnings being treated as errors
f757913
Fri, May 16, 2025 11:03:53 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
55d586a
Fri, May 16, 2025 11:04:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
de5513c
Fri, May 16, 2025 11:05:23 PM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
ee7892f
Fri, May 16, 2025 11:08:25 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b4af4b6
Fri, May 16, 2025 11:31:41 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ec990dc
Fri, May 16, 2025 11:32:32 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9fc31f8
Fri, May 16, 2025 11:33:29 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
2e6aea0
Fri, May 16, 2025 11:35:07 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:100:25: error: implicit declaration of function 'isvalid' [-Werror=implicit-function-declaration]
                     if (isvalid(copia)) {
                         ^~~~~~~
cc1.exe: all warnings being treated as errors
00448b6
Fri, May 16, 2025 11:35:23 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
1bb88f2
Fri, May 16, 2025 11:45:23 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:116:9: error: implicit declaration of function 'firstList' [-Werror=implicit-function-declaration]
     if (firstList(get_adj_nodes(n)) != NULL) return 1;
         ^~~~~~~~~
sudoku.c:116:37: error: comparison between pointer and integer [-Werror]
     if (firstList(get_adj_nodes(n)) != NULL) return 1;
                                     ^~
cc1.exe: all warnings being treated as errors
f0df437
Fri, May 16, 2025 11:45:32 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:116:9: error: implicit declaration of function 'firstList' [-Werror=implicit-function-declaration]
     if (firstList(get_adj_nodes(n)) == NULL) return 1;
         ^~~~~~~~~
sudoku.c:116:37: error: comparison between pointer and integer [-Werror]
     if (firstList(get_adj_nodes(n)) == NULL) return 1;
                                     ^~
cc1.exe: all warnings being treated as errors
498b137
Fri, May 16, 2025 11:45:44 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:116:9: error: implicit declaration of function 'firstList' [-Werror=implicit-function-declaration]
     if (firstList(get_adj_nodes(n)) == NULL) return 1;
         ^~~~~~~~~
sudoku.c:116:37: error: comparison between pointer and integer [-Werror]
     if (firstList(get_adj_nodes(n)) == NULL) return 1;
                                     ^~
cc1.exe: all warnings being treated as errors
ecc65a4
Fri, May 16, 2025 11:45:52 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
834c6cd
Sat, May 17, 2025 12:22:36 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  7|1
total_score: 55/70
e9f3a05
Sat, May 17, 2025 12:41:09 AM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
eafc3ed
Sat, May 17, 2025 12:50:31 AM: 
 sudoku.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  8|1
total_score: 60/70
180403d
Sat, May 17, 2025  1:33:02 AM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
37e1a30
Sat, May 17, 2025  1:36:36 AM: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
4321dd6
Sat, May 17, 2025  1:44:22 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
97e52a9
Sat, May 17, 2025  1:45:08 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
c5321f3
Sat, May 17, 2025  1:54:15 AM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4182379
Sat, May 17, 2025  2:02:48 AM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
a9b50ca
Sat, May 17, 2025  2:04:47 AM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
750729f
Sat, May 17, 2025  2:10:47 AM: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
e64e358
Sat, May 17, 2025  2:20:22 AM: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
55ae984
Sat, May 17, 2025  2:20:35 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2889099
Sat, May 17, 2025  2:22:21 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
3008a14
Sat, May 17, 2025  2:22:37 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e91879a
Sat, May 17, 2025  2:24:10 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43957e6
Sat, May 17, 2025  2:25:24 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
39213b5
Sat, May 17, 2025  2:26:54 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
3219774
Sat, May 17, 2025  2:33:03 AM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
290ba3c
Sat, May 17, 2025  2:37:08 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2295f33
Sat, May 17, 2025  2:46:05 AM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
f13c0fa
Sat, May 17, 2025  2:49:04 AM: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
Compilation failed
test.c: In function 'DFS':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
cb9fc36
Sat, May 17, 2025  2:49:34 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
546c7b7
Sat, May 17, 2025  2:53:11 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1de2a6e
Sat, May 17, 2025  2:59:54 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
16b140f
Sat, May 17, 2025  3:04:13 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6d4d7a3
